Collection search on top z-index fix

--- a/webapp/eminstitute/app/theme/css/collectives.css
+++ b/webapp/eminstitute/app/theme/css/collectives.css
@@ -527,9 +527,11 @@ a.collectivetag {
     padding: 3px 10px;
     border: 1px solid transparent;
     border-radius: .25rem;
+    margin:0 2px 4px 0;
 }
 a.collectivetag:hover {
 	background-color: #afafaf;
+	text-decoration: none;
 	color:#fff;
 	}
 .feedcard-author {
