--- a/webapp/eminstitute/app/theme/css/oi.css
+++ b/webapp/eminstitute/app/theme/css/oi.css
@@ -192,7 +192,7 @@ header.masthead .intro-text {
 	/*box-shadow: 0 0 2px 0 rgba(0,0,0,0.2);*/
 	box-shadow:2px 2px 6px 0 rgba(0,0,0,0.2);
 	position:relative;
-	z-index:500;
+	z-index:100;
 }
 
 
@@ -313,6 +313,9 @@ label.error {
 .isteammeber .fas {
 	color:#E7B82A!important;
 }
+.searchcollectivescontainer .select2-container {
+	z-index:200;
+	}
 @media (min-width: 840px) {
 #searchcollectivescontainer {
 	position:absolute;
